[package]
name = "rust-oauth-proxy"
version = "0.2.0"
authors = ["Patrick Haun <bomgar85@googlemail.com>"]
description = "A small http proxy to sign requests using OAuth 1.0"
repository = "https://github.com/bomgar/rust-oauth-proxy"
readme = "README.org"
keywords = ["http", "oauth"]
license = "Apache-2.0"

[dependencies]
url = "1.0"
rand = "0.3"
base64 = "0.2"
rust-crypto = "^0.2"
clap="2.22"
time = "0.1.35"
hyper = "0.9"
slog = "1"
slog-term = "1"

